--- a/app/views/admin/home/index.html.erb
+++ b/app/views/admin/home/index.html.erb
@@ -20,7 +20,7 @@
 				<br>
 				Em caso de dúvidas, bugs ou sugestões, ligue-nos: 11 4411 4707.<br>
 				<br>
-				Ou  se preferir, nos envie um e-mail: contato@agenciaeconomica.com.br
+				Ou  se preferir, nos envie um e-mail: rmatuoka@agenciaeconomica.com.br
 			</p>
 		</div>
 		<div class="Linha"></div>
